crates/cribo/tests/snapshots/bundled_code@bundle_third_party_namespace_regular_parent_wins.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_namespace_regular_parent_wins/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

"""A regular parent without the child beats a portion WITH it.\n\nThe entry directory's PEP 420 portion carries ns_pkg/extra.py, but the\nenvironment installs a REGULAR ns_pkg lacking extra. Python commits to the\nregular package's __path__ and the dotted import fails; bundling the\nportion's extra would silently resurrect a module the source program never\nloads.\n"""
import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
try:
    import ns_pkg.extra
    print("loaded:", ns_pkg.extra.KIND)
except ModuleNotFoundError:
    print("missing")
