crates/cribo/tests/snapshots/bundled_code@bundle_third_party_relative_importlib_pruning.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_relative_importlib_pruning/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
_cribo_captured = {}
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _ModuleType=_cribo.types.ModuleType, _captured=_cribo_captured):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _ModuleType(spec.name)
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                fresh._cribo_fresh_life = True
                return fresh
            return module
        module = _ModuleType(spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _captured[binding] if binding in _captured else _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _getattr=getattr, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        record_snapshot = not _getattr(module, '_cribo_fresh_life', False)
        if init is None:
            if record_snapshot and key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if record_snapshot and key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('rel_pkg', '_cribo_init___cribo_8d8e6c_rel_pkg', 'rel_pkg', True)
rel_pkg_backend = _cribo.types.SimpleNamespace(__name__='rel_pkg.backend')
rel_pkg = _cribo.types.SimpleNamespace(__name__='rel_pkg', __initializing__=False, __initialized__=False, __path__=[])
rel_pkg.backend = rel_pkg_backend
KIND = "relative"
rel_pkg_backend.KIND = KIND
def _cribo_init___cribo_8d8e6c_rel_pkg(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    try:
        _cribo_self.__package__ = 'rel_pkg'
        _cribo_self.__doc__ = 'Package loading its backend through a relative import_module call.'
        """Package loading its backend through a relative import_module call."""
        importlib = _cribo.importlib
        _cribo_self.importlib = importlib
        _cribo_self.importlib = importlib
        backend = _cribo.importlib.import_module('rel_pkg.backend') if 'rel_pkg' in _cribo.sys.modules or 'rel_pkg.backend' in _cribo.sys.modules else _cribo.types.SimpleNamespace(KIND=KIND)
        _cribo_self.backend = backend

        def backend_kind():
            return KIND
        backend_kind.__module__ = 'rel_pkg'
        backend_kind.__qualname__ = 'backend_kind'
        _cribo_self.backend_kind = backend_kind
        _cribo_self.backend = rel_pkg_backend
        _cribo_self.__initialized__ = True
        _cribo_self.__initializing__ = False
        return _cribo_self
    except _cribo_base_exception:
        _cribo_self.__initializing__ = False
        raise
rel_pkg.__init__ = _cribo_init___cribo_8d8e6c_rel_pkg
late_checker = _cribo.types.SimpleNamespace(__name__='late_checker', __doc__='Metadata query recorded AFTER dropped_pkg was discovered flips it external.')
"""Metadata query recorded AFTER dropped_pkg was discovered flips it external."""
"""Relative import_module targets must survive unreachable-module pruning.\n\nlate_checker's metadata query flips dropped_pkg external AFTER discovery, so\nthe pruning pass runs. rel_pkg reaches its backend only through\nimport_module(\".backend\", package=\"rel_pkg\"): the recorded edge must be the\nABSOLUTE name \"rel_pkg.backend\", otherwise pruning discards the backend and\nthe bundled package cannot initialize.\n"""
__cribo_init_result = _cribo_init___cribo_8d8e6c_rel_pkg(rel_pkg)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(rel_pkg, attr, getattr(__cribo_init_result, attr))
try:
    import dropped_pkg
except ImportError:
    pass
print(rel_pkg.backend_kind())
